--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>grey book gwalior no 1 book destination</title>
+    <title>Grey Book Gwalior's No 1 Book Destination</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 
@@ -13,7 +13,7 @@
 <body>
 
     <div id="logo">
-        <img src="logo.png" alt="grey book">
+        <img src="logo.png" alt="Grey Book">
 
     </div>
     <header class="text-gray-700 body-font">
@@ -33,7 +33,7 @@
 
                 </nav>
                 <form method="submit" action="https://forms.gle/fWxMBRdPEonQoioV8">
-                    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0"> register (for beta testing)
+                    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0"> Register (For Closed Beta Testing)
                   
                   
                     <svg  fill=" none " stroke=" currentColor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 " class="w-4 h-4 ml-1 " viewBox="0 0 24 24 ">
@@ -69,11 +69,11 @@
                             <div class="flex flex-col items-center text-center justify-center ">
                                 <h2 class="font-medium title-font mt-4 text-gray-900 text-lg ">The Greybook team</h2>
                                 <div class="w-12 h-1 bg-indigo-500 rounded mt-2 mb-4 "></div>
-                                <p class="text-base text-gray-600 ">The Greybook team is determined to provide every user hassle-free,smooth experience through its platform. we are provinding thousands of books ,notes, pdf free of cost </p>
+                                <p class="text-base text-gray-600 ">The Greybook team is determined to provide every user a hassle-free,smooth experience. We are providing thousands of books ,notes, pdf free of cost </p>
                             </div>
                         </div>
                         <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-300 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left ">
-                            <p class="leading-relaxed text-lg mb-4 ">The greybook official website and web app going to be live at 15.08.2020 . The sites contains various useful books,pdf,notes at its resources . Become a Grey book member and explore the library at one place. regards grey book
+                            <p class="leading-relaxed text-lg mb-4 ">The Greybook Official Website and App is going to be live at 15.08.2020. This Site contains various useful books,pdf,notes at its resources. Become a Grey book member and explore the library at one place. regards grey book
                                 team </p>
                             <a class="text-indigo-500 inline-flex items-center ">Learn More
                   <svg fill="none " stroke="currentColor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 " class="w-4 h-4 ml-2 " viewBox="0 0 24 24 ">
@@ -99,7 +99,7 @@
                   <path d="M8 17l4 4 4-4m-4-5v9 "></path>
                   <path d="M20.88 18.09A5 5 0 0018 9h-1.26A8 8 0 103 16.29 "></path>
                 </svg>
-                            <h2 class="title-font font-medium text-3xl text-gray-900 ">app coming soon</h2>
+                            <h2 class="title-font font-medium text-3xl text-gray-900 ">App Coming Soon</h2>
                             <p class="leading-relaxed ">Downloads</p>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                   <circle cx="9 " cy="7 " r="4 "></circle>
                   <path d="M23 21v-2a4 4 0 00-3-3.87m-4-12a4 4 0 010 7.75 "></path>
                 </svg>
-                            <h2 class="title-font font-medium text-3xl text-gray-900 ">coming soon</h2>
+                            <h2 class="title-font font-medium text-3xl text-gray-900 ">Coming Soon</h2>
                             <p class="leading-relaxed ">Users</p>
                         </div>
                     </div>
@@ -120,8 +120,8 @@
                   <path d="M3 18v-6a9 9 0 0118 0v6 "></path>
                   <path d="M21 19a2 2 0 01-2 2h-1a2 2 0 01-2-2v-3a2 2 0 012-2h3zM3 19a2 2 0 002 2h1a2 2 0 002-2v-3a2 2 0 00-2-2H3z "></path>
                 </svg>
-                            <h2 class="title-font font-medium text-3xl text-gray-900 ">launching soon</h2>
-                            <p class="leading-relaxed ">books</p>
+                            <h2 class="title-font font-medium text-3xl text-gray-900 ">Launching Soon</h2>
+                            <p class="leading-relaxed ">Books</p>
                         </div>
                     </div>
                     <div class="p-4 md:w-1/4 sm:w-1/2 w-full ">
@@ -129,8 +129,8 @@
                             <svg fill="none " stroke="currentColor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 " class="text-indigo-500 w-12 h-12 mb-3 inline-block " viewBox="0 0 24 24 ">
                   <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z "></path>
                 </svg>
-                            <h2 class="title-font font-medium text-3xl text-gray-900 ">development stage</h2>
-                            <p class="leading-relaxed ">status</p>
+                            <h2 class="title-font font-medium text-3xl text-gray-900 ">Development Stage</h2>
+                            <p class="leading-relaxed ">Status</p>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <span class="ml-3 text-xl ">Greybook</span>
                 </a>
                 <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 ">© 2020 Greybook —
-                    <a href="https://twitter.com/knyttneve " class="text-gray-600 ml-1 " rel="noopener noreferrer " target="_blank ">@greybookapp@gmal.cpm</a>
+                    <a href="https://www.instagram.com/_gauravkushwah_/" class="text-gray-600 ml-1 " rel="noopener noreferrer " target="_blank ">thegreybooksapp@gmail.com</a>
                 </p>
                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start ">
             <a class="text-gray-500 ">
