--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section class="text-gray-700 body-font ">
             <div class="container px-5 py-24 mx-auto ">
                 <div class="flex flex-col text-center w-full mb-20 ">
-                    <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900 ">the grey book </h1>
+                    <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900 ">The Grey Book </h1>
                     <p class="lg:w-2/3 mx-auto leading-relaxed text-base ">We are developing fast and hoping the same for all of the grey users</p>
                 </div>
                 <div class="flex flex-wrap -m-4 text-center ">
@@ -130,7 +130,7 @@
                   <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z "></path>
                 </svg>
                             <h2 class="title-font font-medium text-3xl text-gray-900 ">Development Stage</h2>
-                            <p class="leading-relaxed ">Status</p>
+                            <p class="leading-relaxed "></p>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <span class="ml-3 text-xl ">Greybook</span>
                 </a>
                 <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 ">© 2020 Greybook —
-                    <a href="https://www.instagram.com/_gauravkushwah_/" class="text-gray-600 ml-1 " rel="noopener noreferrer " target="_blank ">thegreybooksapp@gmail.com</a>
+                    <a href="mailto:thegreybooksapp@gmail.com" class="text-gray-600 ml-1 " rel="noopener noreferrer " target="_blank ">thegreybooksapp@gmail.com</a>
                 </p>
                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start ">
             <a class="text-gray-500 ">
