--- a/aboutus.html
+++ b/aboutus.html
@@ -79,8 +79,8 @@
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-400 mb-4" viewBox="0 0 975.036 975.036">
                   <path d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
                 </svg>
-                        <p class="leading-relaxed mb-6">Gaurav Kushwah : he is a student of electronics and telecommunication at MITS gwalior .he is the front end developer of the the grey book team . He is currently working on our website please do feedback for helping in making us
-                            bette.
+                        <p class="leading-relaxed mb-6">Gaurav Kushwah : he is a student of electronics and telecommunication at MITS gwalior. He is the front end developer of the the grey book team. He is currently working on our website please do feedback for helping in making us
+                            better.
                         </p>
                         <a class="inline-flex items-center">
                             <img alt="GAURAV KUSHWAH" src="frontend.jpg" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
@@ -117,7 +117,7 @@
                 <span class="ml-3 text-xl">Grey book</span>
             </a>
             <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 GreyBook
-                <a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@thegreybookapp@gmail.com</a>
+                <a href="mailto:thegreybookapp@gmail.com" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">thegreybookapp@gmail.com</a>
             </p>
             <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
             <a class="text-gray-500">
