--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <span class="ml-3 text-xl ">Greybook</span>
                 </a>
                 <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 ">© 2020 Greybook —
-                    <a href="mailto:thegreybooksapp@gmail.com" class="text-gray-600 ml-1 " rel="noopener noreferrer " target="_blank ">thegreybooksapp@gmail.com</a>
+                    <a href="embed.html" class="text-gray-600 ml-1 " rel="noopener noreferrer " target="_blank ">thegreybooksapp@gmail.com</a>
                 </p>
                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start ">
             <a class="text-gray-500 ">
