--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <a href="contactus.html" class="mr-5 hover:text-gray-400">Contact us</a>
 
                 </nav>
-                <form method="submit" action="https://forms.gle/fWxMBRdPEonQoioV8">
-                    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0"> Register (For Closed Beta Testing)
+                <form method="submit" action="redirect.html">
+                    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0"> Download (Beta build)
                   
                   
                     <svg  fill=" none " stroke=" currentColor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 " class="w-4 h-4 ml-1 " viewBox="0 0 24 24 ">
@@ -49,7 +49,7 @@
           </button>
         </div>
     </header>
-    <h2 style="font-size:x-large; color: gray; opacity:0.6 ;"> (Note: the registration for beta testing has begin do register for early access and enjoy benefits. the site is under development some features may not work at this stage.)
+    <h2 style="font-size:x-large; color: gray; opacity:0.6 ;">Note : Beta Out Now Click the Download button to get it.
     </h2>
     <nav id="navbar ">
         <section class="text-gray-700 body-font ">
@@ -145,7 +145,7 @@
                     <span class="ml-3 text-xl ">Greybook</span>
                 </a>
                 <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 ">© 2020 Greybook —
-                    <a href="embed.html" class="text-gray-600 ml-1 " rel="noopener noreferrer " target="_blank ">thegreybooksapp@gmail.com</a>
+                    <a href="mailto:thegreybooksapp@gmail.com" class="text-gray-600 ml-1 " rel="noopener noreferrer " target="_blank ">thegreybooksapp@gmail.com</a>
                 </p>
                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start ">
             <a class="text-gray-500 ">
